feat: add `wallet` routes
